Embed chatbot code in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
+    <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/04/10/12/20250410123841-WJF19AOM.js"></script>
+    
     <title>X-treme Services - Professional Construction Solutions</title>
   </head>
   <body>
